1.11.0:
* Big refactoring all over the codebase; improvements, new features, all kind of cleanups

1.10.4 - 2025-01-23:
* Testnet4 support. For now needs "CFG.Testnet4" set to true, otherwise still uses testnet3
* Wallet: new command line and config switch "prompt" to confirm writing signed transaction to disk
* Wallet: Displays a message before exiting, when an empty seed pasword is provided
* Lib: FindFarthestNode() now selects the farthest block by sum of POW, not by its height (fix for testnet4 crash at #42702)
* Client: New config value "TxPool.NotFullRBF" for turning off full-RBF, that is enabled now in sync with Core 28.0
* Client: Command switch "-t" now defaults to testnet4 (use "-t3" for testnet3)
* Client/WebUI/MakeTx: Removed "Final" checkbox (next to the sequence entry)
* Client: removed "client/usif/textui/consensus" package
* Tools: new tool "txoutset" to deal with the core's UTXO dumps (from "dumptxoutset" RPC)
* Client/WebUI/Wallet: "balance.zip" also lists coins belonging to segwit ver 1 (taproot) address types (got from pubkeys)
* Client: for incomming connections, send "version" message only after receiving one (in sync with core's behaviour)
* Lib: Fixed a bug in chain.GetNextWorkRequired() that was causing the problem at Testnet3 block #3229632
* Client/TextUI: removed commands "bip9" and "usd"
* Client/WebUI: Keep settings for the block fees chart (Home or Blocks page) in the local storage
* Client/TextUI: new command "pusholdtxs", to broadcast txs that have been stuck in our mempool
* Client/TextUI: "savetx" saves the transaction's hexdump now (instead of binary file)
* Client/WebUI/Transactions: Decoding a transaction also shows its raw data
* Client/WebUI/Transactions: Listed mempool transactions also show a number of unconfirmed inputs
* Tools: "btcversig" now works also for signatures generated with a segwit type address
* Client: the configured max mempool size is now closer to what bitcoin core would keep for the same value
