@@ -61,39 +61,19 @@ func (c *OneConnection) processGetData(b *bytes.Reader) {
 		c.InvStore(typ, h[4:36])
 		c.Mutex.Unlock()
 
-		if typ == MSG_BLOCK || typ == MSG_WITNESS_BLOCK {
-			if typ == MSG_BLOCK {
-				common.CountSafe("GetdataBlock")
-			} else {
-				common.CountSafe("GetdataBlockSw")
-			}
+		if typ == MSG_WITNESS_BLOCK { // Note: MSG_BLOCK is not longer supported
+			common.CountSafe("GetdataBlockSw")
 			hash := btc.NewUint256(h[4:])
 			crec, _, er := common.BlockChain.Blocks.BlockGetExt(hash)
-
 			if er == nil {
 				bl := crec.Data
-				if typ == MSG_BLOCK {
-					// remove witness data from the block
-					if crec.Block == nil {
-						crec.Block, _ = btc.NewBlock(bl)
-					}
-					if crec.Block.NoWitnessData == nil {
-						crec.Block.BuildNoWitnessData()
-					}
-					//println("block size", len(crec.Data), "->", len(bl))
-					bl = crec.Block.NoWitnessData
-				}
 				c.SendRawMsg("block", bl)
 			} else {
 				//fmt.Println("BlockGetExt-2 failed for", hash.String(), er.Error())
 				//notfound = append(notfound, h[:]...)
 			}
-		} else if typ == MSG_TX || typ == MSG_WITNESS_TX {
-			if typ == MSG_TX {
-				common.CountSafe("GetdataTx")
-			} else {
-				common.CountSafe("GetdataTxSw")
-			}
+		} else if typ == MSG_WITNESS_TX { // Note: MSG_TX is no longer supported
+			common.CountSafe("GetdataTxSw")
 			// ransaction
 			txpool.TxMutex.Lock()
 			if tx, ok := txpool.TransactionsToSend[btc.NewUint256(h[4:]).BIdx()]; ok && tx.Blocked == 0 {
@@ -359,13 +339,6 @@ func (c *OneConnection) GetBlockData() (yes bool) {
 	}
 
 	var cnt uint64
-	var block_type uint32
-
-	if (c.Node.Services & btc.SERVICE_SEGWIT) != 0 {
-		block_type = MSG_WITNESS_BLOCK
-	} else {
-		block_type = MSG_BLOCK
-	}
 
 	// We can issue getdata for this peer
 	// Let's look for the lowest height block in BlocksToGet that isn't being downloaded yet
@@ -386,17 +359,6 @@ func (c *OneConnection) GetBlockData() (yes bool) {
 	}
 	if max_max_height > LastCommitedHeader.Height {
 		max_max_height = LastCommitedHeader.Height
-	}
-
-	if common.BlockChain.Consensus.Enforce_SEGWIT != 0 && (c.Node.Services&btc.SERVICE_SEGWIT) == 0 { // no segwit node
-		if max_height >= common.BlockChain.Consensus.Enforce_SEGWIT-1 {
-			max_height = common.BlockChain.Consensus.Enforce_SEGWIT - 1
-			if max_height <= LowestIndexToBlocksToGet {
-				Fetch.NoWitness++
-				c.nextGetData = time.Now().Add(time.Hour) // never do getdata
-				return
-			}
-		}
 	}
 
 	Fetc.HeightD = uint64(max_height)
@@ -444,7 +406,7 @@ func (c *OneConnection) GetBlockData() (yes bool) {
 	found_it:
 		Fetc.C[lowest_found.InProgress]++
 
-		binary.Write(invs, binary.LittleEndian, block_type)
+		binary.Write(invs, binary.LittleEndian, MSG_WITNESS_BLOCK)
 		invs.Write(lowest_found.BlockHash.Hash[:])
 		lowest_found.InProgress++
 		cnt++
